automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = len(neighborho)"
+    "la_boca = neightborhoods[len(neighborhoods)"
    ]
   },
   {
